--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
    "scripts": {
       "start": "node build/index.js",
       "postinstall": "tsc",
-      "dev": "ts-node-dev src/index.ts",
+      "dev": "ts-node-dev index.ts",
       "tsc": "tsc",
       "test": "echo \"Error: no test specified\" && exit 1"
    },
